--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==0.13.0
 aiohttp==3.7.4.post0
+antlr4-python3-runtime==4.8
 async-timeout==3.0.1
 attrs==21.2.0
 cachetools==4.2.2
@@ -12,13 +13,16 @@ future==0.18.2
 google-auth==1.34.0
 google-auth-oauthlib==0.4.4
 grpcio==1.39.0
+hydra-core==1.1.0
 idna==3.2
 importlib-metadata==4.6.1
+importlib-resources==5.2.2
 Markdown==3.3.4
 multidict==5.1.0
 norbert==0.2.1
 numpy==1.21.0
 oauthlib==3.1.1
+omegaconf==2.1.0
 packaging==21.0
 pandas==1.1.2
 Pillow==8.3.1
@@ -34,6 +38,7 @@ PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
+sentencepiece==0.1.96
 six==1.16.0
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
